--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -19,6 +19,12 @@
     <script defer src="./src/js/app.js"></script>
 </head>
 <body>
+  <header>
+    <h1>Whatever we're gonna call this thing</h1>
+  </header>
+  <main>
+    
+  </main>
   <!--
   - First page 
     - Top Scores/Current scores display
