--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -19,6 +19,28 @@
     <script defer src="./src/js/app.js"></script>
 </head>
 <body>
+  <header>
+    <h1>Whatever we're gonna call this thing</h1>
+  </header>
+  <main>
+    <section class="score-display">
+      <div class="current-scores">
+        <div>
+          <h4 class="player-one-name"></h4>
+          <p class="player-one-score"></p>
+        </div>
+        <div>
+          <h4 class="player-two-name"></h4>
+          <p class="player-two-score"></p>
+        </div>
+        <div>
+          <h4 class="player-three-name"></h4>
+          <p class="player-three-score"></p>
+        </div>
+      </div>
+      <ul class="high-scores"></ul>
+    </section>
+  </main>
 <!--
 - Question/answer display
 - Player guess display 
