--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" src="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css" media="all">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
     <script defer src="./src/js/app.js"></script>
 </head>
@@ -22,28 +22,34 @@
   <header>
     <h1>Whatever we're gonna call this thing</h1>
   </header>
-  <main>
+  <main class="f-col">
     <!--  Lobby will hold placeholders for participants when game is not running. As users join it will update the chosen
           avatar and user name. Once three users have joined (or at least one) the admin can start the game. 
           I think we should leave the game control only on the admin frontend.          
     -->
-    <section class="lobby">
-      <div class="f-col">
-        <h4 class="player-one-status"></h4>
-        <img src="../img/user-solid.svg">
-        <p class="player-one"></p>
+    <section class="lobby f-col">
+      <div class="flex">
+        <div class="f-col">
+          <h4 class="player-one-status">Unoccupied</h4>
+          <img class="profile" src="../img/user-solid.svg">
+          <p class="player-one">Unnamed</p>
+        </div>
+        <div class="f-col">
+          <h4 class="player-two-status">Unoccupied</h4>
+          <div class="circle">
+            <img class="profile" src="../img/user-solid.svg">
+          </div>
+          <p class="player-two">Unnamed</p>
+        </div>
+        <div class="f-col">
+          <h4 class="player-three-status">Unoccupied</h4>
+          <img class="profile" src="../img/user-solid.svg">
+          <p class="player-three">Unnamed</p>
+        </div>
       </div>
-      <div class="f-col">
-        <h4 class="player-two-status"></h4>
-        <img src="../img/user-solid.svg">
-        <p class="player-two"></p>
-      </div>
-      <div class="f-col">
-        <h4 class="player-three-status"></h4>
-        <img src="../img/user-solid.svg">
-        <p class="player-three"></p>
-      </div>
+      <div>
         <button class="start-cancel"></button>
+      </div>
     </section>
     <!--
       Here will show the player scores for the current game
@@ -53,24 +59,26 @@
     <section class="score-display">
       <div class="current-scores">
         <div>
-          <h4 class="player-one-name"></h4>
-          <p class="player-one-score"></p>
+          <h4 class="player-one-name">Player1</h4>
+          <p class="player-one-score">100</p>
         </div>
         <div>
-          <h4 class="player-two-name"></h4>
-          <p class="player-two-score"></p>
+          <h4 class="player-two-name">Player2</h4>
+          <p class="player-two-score">100</p>
         </div>
         <div>
-          <h4 class="player-three-name"></h4>
-          <p class="player-three-score"></p>
+          <h4 class="player-three-name">Player3</h4>
+          <p class="player-three-score">100</p>
         </div>
       </div>
-      <ul class="high-scores"></ul>
-      <button class="view">View Questions</button>
+      <ul class="high-scores">
+        <li># 1</li>
+        <li>#2</li>
+      </ul>
     </section>
   </main>
-  <footer>
-
+  <footer class="flex">
+    <button class="view">View Questions</button>
   </footer>
   <!--
   - First page 
