--- a/public/gameplay/signUp.html
+++ b/public/gameplay/signUp.html
@@ -14,44 +14,23 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" src="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
-    <script defer src="./app.js"></script>
+    <script defer src="./signUp.js"></script>
 </head>
 <body>
   <header>
     <h1>Whatever we're gonna call this thing</h1>
   </header>
   <main>
-    <section class="question-display">
-      <h3>Current Question:</h3>
-      <div id="question-container">
-          <p id="question-text">Waiting for a question...</p>
+    <section class="player-lobby">
+      <div class="avatar-wrapper">
+        <img src="../img/user-solid.svg">
       </div>
-    </section>
-    <section class="score-display">
-      <!-- <div class="current-scores">
-        <div>
-          <h4 class="player-one-name">Player 1</h4>
-          <p class="player-one-score">0</p>
-        </div>
-        <div>
-          <h4 class="player-two-name">Player 2</h4>
-          <p class="player-two-score">0</p>
-        </div>
-        <div>
-          <h4 class="player-three-name">Player 3</h4>
-          <p class="player-three-score">0</p>
-        </div>
-      </div> -->
-      <div class="high-scores" id="leaderboard"></div>
+      <button class="select-pic">Choose</button>
+      <input id="playerName" placeholder="Enter your name" class="name-entry">
+      <button class="select-name">Enter</button>
     </section>
   </main>
-<!--
-- Question/answer display
-- Player guess display 
-- Current Player scores 
-- Top Scores list
--->
 </body>
 </html>
