--- a/public/gameplay/index.html
+++ b/public/gameplay/index.html
@@ -47,6 +47,10 @@
           <p class="opt-four-txt">Sample 4</p>
         </div>
       </div>
+      <!-- <div id="tf-options" style="display: none;">
+        <label><input type="radio" name="answer" value="true" /> True</label><br/>
+        <label><input type="radio" name="answer" value="false" /> False</label>
+      </div> -->
       <input id="answer" placeholder="Your answer">
       <button class="submit">Submit</button>
     </section>
