--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -14,7 +14,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" src="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
     <script defer src="./app.js"></script>
 </head>
@@ -23,10 +23,10 @@
     <h1>Whatever we're gonna call this thing</h1>
   </header>
   <main>
-    <section class="question-display">
-      <h3>Current Question:</h3>
-      <div id="question-container">
-          <p id="question-text">Waiting for a question...</p>
+    <h3>Current Question:</h3>
+    <section class="question-display f-col">
+      <div class="question-wrapper flex">
+        <p id="question-text">Blah blah blah, which is it?</p>
       </div>
     </section>
     <section class="score-display">
@@ -44,8 +44,10 @@
           <p class="player-three-score">0</p>
         </div>
       </div> -->
-      <div class="high-scores" id="leaderboard"></div>
+      <div class="high-scores" id="leaderboard">
+      </div>
     </section>
+    
   </main>
 <!--
 - Question/answer display
