--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -15,16 +15,42 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
     <script defer src="./app.js"></script>
 </head>
-<body>
+<body class="viewing">
   <header>
-    <h1>Whatever we're gonna call this thing</h1>
+    <h1>Cyber Clash</h1>
   </header>
-  <main>
-    <h3>Current Question:</h3>
-    <section class="question-display f-col">
+  <main class="f-col">
+    <section class="lobby f-col">
+      <div class="flex sp-btw">
+        <div class="center f-col">
+          <h4 class="player-one-status">Unoccupied</h4>
+          <div class="circle">
+            <img class="profile" src="../img/user-solid.svg">
+          </div>
+          <p class="player-one">Unnamed</p>
+        </div>
+        <div class="center f-col">
+          <h4 class="player-two-status">Unoccupied</h4>
+          <div class="circle">
+            <img class="profile" src="../img/user-solid.svg">
+          </div>
+          <p class="player-two">Unnamed</p>
+        </div>
+        <div class="center f-col">
+          <h4 class="player-three-status">Unoccupied</h4>
+          <div class="circle">
+            <img class="profile" src="../img/user-solid.svg">
+          </div>
+          <p class="player-three">Unnamed</p>
+        </div>
+      </div>
+    </section>
+    <section class="question-display-viewing f-col">
+      <h3>Current Question:</h3>
       <div class="question-wrapper flex">
         <p id="question-text">Blah blah blah, which is it?</p>
       </div>
