--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -8,14 +8,14 @@
     <meta name="theme-color" content="#ffffff">
     <script src="/socket.io/socket.io.js"></script>
     <title></title>
-    <link rel="icon" href="./src/img/favicon.png" type="image/x-icon">
+    <!-- <link rel="icon" href="./src/img/favicon.png" type="image/x-icon"> -->
     
     <!-- External stylesheets -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/reset.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
     <script defer src="./app.js"></script>
 </head>
@@ -25,7 +25,7 @@
   </header>
   <main class="f-col">
     <section class="lobby f-col">
-      <div class="flex sp-btw">
+      <div class="flex sp-even">
         <div class="center f-col">
           <h4 class="player-one-status">Unoccupied</h4>
           <div class="circle">
