Toggable high scores added, no select added to body

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
     <script defer src="./app.js"></script>
 </head>
-<body>
+<body class="no-select">
   <header>
     <h1>Cyber Clash</h1>
   </header>
@@ -58,6 +58,9 @@
       </div>
     </section>
     <section class="score-display">
+      <h3 class="score-trigger pointer hover">
+        High Scores
+      </h3>
       <div class="high-scores" id="leaderboard">
       </div>
     </section>
