--- a/public/gameplay/signUp.html
+++ b/public/gameplay/signUp.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
     <script defer src="./signUp.js"></script>
 </head>
-<body>
+<body class="no-select">
   <header>
     <h1>Whatever we're gonna call this thing</h1>
   </header>
