--- a/public/gameplay/signUp.html
+++ b/public/gameplay/signUp.html
@@ -26,7 +26,7 @@
   <main class="f-col">
     <section class="player-lobby f-col center">
         <div class="picture-chooser flex center">
-          <div class="left-arrow">
+          <div class="left-arrow pointer hover">
             <i class="fa-solid fa-arrow-left"></i>
           </div>
           <div class="circle">
