--- a/public/gameplay/index.html
+++ b/public/gameplay/index.html
@@ -16,15 +16,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Lexend:wght@100..900&family=Merriweather+Sans:ital,wght@0,300..800;1,300..800&family=Merriweather:ital,opsz,wght@0,18..144,300..900;1,18..144,300..900&family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
-    <script defer src="./app.js"></script>
-</head>
+    <script src="app.js" defer></script>
+  </head>
 <body>
   <header>
     <h1>Whatever we're gonna call this thing</h1>
   </header>
   <main>
     <!--Here the player will have to enter their name and choose profile images (will hardcode options)-->
-    <section class="player-lobby f-col hidden">
+    <section class="player-lobby f-col">
       <div class="avatar-wrapper">
         <img src="../img/user-solid.svg">
       </div>
@@ -37,6 +37,13 @@
       Whe could create formatting for each type of question and then only make the appropriate one visible
       or we can change the question formatting dynamically with JS and css classes
     -->
+
+    <div id="questionArea" class="question-wrapper flex">
+      <p class="question-text">Blah blah blah, which is it?</p>
+    </div>
+    
+    <input id="answer" placeholder="Your answer">
+    <button class="submit">Submit</button>
     <section class="question-display f-col">
       <div class="question-wrapper flex">
         <p class="question-text">Blah blah blah, which is it?</p>
@@ -59,5 +66,6 @@
       <button class="submit">Submit</button>
     </section>
   </main>
+  <script src="/socket.io/socket.io.js"></script>
 </body>
 </html>
