More integration and added avatar login

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -52,10 +52,24 @@
           <p class="player-three">Unnamed</p>
         </div>
       </div>
-      <div>
-        <button class="start">Start</button>
-        <button class="cancel hidden">Cancel</button>
-      </div>
+    <div id="lobby-controls">
+      <button id="startGameBtn">Start Game</button>
+      <button id="cancelGameBtn">Cancel Game</button>
+    </div>
+    </section>
+    <!-- Add a new question  -->
+    <section class="add-question">
+      <h3>Add a New Question</h3>
+      <!-- <form id="questionForm">
+        <input type="text" id="question_text" placeholder="Question text" required><br>
+        <input type="text" id="option_a" placeholder="Option A" required><br>
+        <input type="text" id="option_b" placeholder="Option B" required><br>
+        <input type="text" id="option_c" placeholder="Option C" required><br>
+        <input type="text" id="option_d" placeholder="Option D" required><br>
+        <input type="text" id="correct_option" placeholder="Correct Option (e.g. A)" required><br>
+        <button type="submit">Add Question</button>
+      </form> -->
+      <p id="formStatus"></p>
     </section>
     <section class="score-display">
       <h3 class="score-trigger pointer hover">
