--- a/public/gameplay/index.html
+++ b/public/gameplay/index.html
@@ -46,6 +46,8 @@
         <label><input type="radio" name="answer" value="true" /> True</label><br/>
         <label><input type="radio" name="answer" value="false" /> False</label>
       </div> -->
+      <!-- <button id="join">Join</button>
+      <div id="nickname">sdks</div> -->
       <input id="answer" placeholder="Your answer">
       <button class="submit">Submit</button>
     </section>
