--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -54,6 +54,8 @@
       </div>
       <div>
         <button class="start">Start</button>
+         <button class="pause">Pause</button>
+          <button class="stop">Stop</button>
         <button class="cancel hidden">Cancel</button>
       </div>
     </section>
@@ -64,7 +66,7 @@
       <div class="high-scores" id="leaderboard">
       </div>
     </section>
-    <button class="view">View Questions</button>
+    <!-- <button class="view">View Questions</button> -->
   </main>
 </body>
 </html>
