--- a/public/gameplay/index.html
+++ b/public/gameplay/index.html
@@ -24,7 +24,10 @@
     <h1>Cyber Clash</h1>
   </header>
   <main class="f-col">
+    <div class="StopMsg">Quiz Stopped! <br> Thank you for Playing &#128522;</div>
     <section class="question-display f-col">
+      <div id="pauseMessage" class="pause-banner">⏸ Quiz Paused</div>
+      <p class ="warning-msg">Please select an answer!</p>
       <div class="question-wrapper flex">
         <p class="question-text">Blah blah blah, which is it?</p>
       </div>
