--- a/public/gameplay/signUp.html
+++ b/public/gameplay/signUp.html
@@ -24,7 +24,10 @@
     <h1>Cyber Clash</h1>
   </header>
   <main class="f-col">
-    <section class="player-lobby f-col center">
+    <div id="waitingMessage" class="center">
+        <p>Waiting for the admin to start...</p>
+    </div>
+    <section id="playerLobby" class="player-lobby f-col center"  style="display:none;">
         <div class="picture-chooser flex center">
           <div class="left-arrow pointer hover">
             <i class="fa-solid fa-arrow-left"></i>
