--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -54,9 +54,9 @@
       </div>
       <div>
         <button class="start">Start</button>
-         <button class="pause">Pause</button>
-          <button class="stop">Stop</button>
-        <button class="cancel hidden">Cancel</button>
+        <button class="pause">Pause</button>
+        <button class="stop">Stop</button>
+        <!-- <button class="cancel hidden">Cancel</button> -->
       </div>
     </section>
     <section class="score-display">
