--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -29,60 +29,40 @@
         <div class="center f-col">
           <h4 class="player-one-status">Unoccupied</h4>
           <div class="circle">
-            <img class="profile" src="../img/user-solid.svg">
+            <img class="profile player-one-avatar" src="../img/user-solid.svg">
           </div>
-          <p class="player-one">Unnamed</p>
+          <p class="player-one">Not-joined</p>
         </div>
         <div class="center f-col">
           <h4 class="player-two-status">Unoccupied</h4>
           <div class="circle">
-            <img class="profile" src="../img/user-solid.svg">
+            <img class="profile player-two-avatar" src="../img/user-solid.svg">
           </div>
-          <p class="player-two">Unnamed</p>
+          <p class="player-two">Not-joined</p>
         </div>
         <div class="center f-col">
           <h4 class="player-three-status">Unoccupied</h4>
           <div class="circle">
-            <img class="profile" src="../img/user-solid.svg">
+            <img class="profile player-three-avatar" src="../img/user-solid.svg">
           </div>
-          <p class="player-three">Unnamed</p>
+          <p class="player-three">Not-joined</p>
         </div>
       </div>
     </section>
     <section class="question-display-viewing f-col">
       <h3>Current Question:</h3>
       <div class="question-wrapper flex">
-        <p id="question-text">Blah blah blah, which is it?</p>
+        <p id="question-text">Waiting for the question...</p>
       </div>
     </section>
     <section class="score-display">
       <h3 class="score-trigger pointer hover">
         High Scores
       </h3>
-      <!-- <div class="current-scores">
-        <div>
-          <h4 class="player-one-name">Player 1</h4>
-          <p class="player-one-score">0</p>
-        </div>
-        <div>
-          <h4 class="player-two-name">Player 2</h4>
-          <p class="player-two-score">0</p>
-        </div>
-        <div>
-          <h4 class="player-three-name">Player 3</h4>
-          <p class="player-three-score">0</p>
-        </div>
-      </div> -->
       <div class="high-scores" id="leaderboard">
       </div>
     </section>
     
   </main>
-<!--
-- Question/answer display
-- Player guess display 
-- Current Player scores 
-- Top Scores list
--->
 </body>
 </html>
