--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -33,30 +33,29 @@
         <div class="center f-col">
           <h4 class="player-one-status">Unoccupied</h4>
           <div class="circle">
-            <img class="profile" src="../img/user-solid.svg">
+            <img class="profile player-one-avatar" src="../img/user-solid.svg">
           </div>
-          <p class="player-one">Unnamed</p>
+          <p class="player-one">Not-joined</p>
         </div>
         <div class="center f-col">
           <h4 class="player-two-status">Unoccupied</h4>
           <div class="circle">
-            <img class="profile" src="../img/user-solid.svg">
+            <img class="profile player-two-avatar" src="../img/user-solid.svg">
           </div>
-          <p class="player-two">Unnamed</p>
+          <p class="player-two">Not-joined</p>
         </div>
         <div class="center f-col">
           <h4 class="player-three-status">Unoccupied</h4>
           <div class="circle">
-            <img class="profile" src="../img/user-solid.svg">
+            <img class="profile player-three-avatar" src="../img/user-solid.svg">
           </div>
-          <p class="player-three">Unnamed</p>
+          <p class="player-three">Not-joined</p>
         </div>
       </div>
       <div>
         <button class="start">Start</button>
         <button class="pause">Pause</button>
         <button class="stop">Stop</button>
-        <!-- <button class="cancel hidden">Cancel</button> -->
       </div>
     </section>
     <section class="score-display">
@@ -66,7 +65,6 @@
       <div class="high-scores" id="leaderboard">
       </div>
     </section>
-    <!-- <button class="view">View Questions</button> -->
   </main>
 </body>
 </html>
