Some style choices made

--- a/public/gameplay/index.html
+++ b/public/gameplay/index.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">    
     <script src="app.js" defer></script>
   </head>
-<body>
+<body class="no-select play-body">
   <header>
     <h1>Cyber Clash</h1>
   </header>
