--- a/public/gameplay/signUp.html
+++ b/public/gameplay/signUp.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Dave Sommerville">
     <meta name="theme-color" content="#ffffff">
     <script src="/socket.io/socket.io.js"></script>
-    <title></title>
+    <title>Sign Up for game</title>
     <link rel="icon" href="./src/img/favicon.png" type="image/x-icon">
     
     <!-- External stylesheets -->
