Viewing styling generally finished

--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -22,15 +22,27 @@
 </head>
 <body class="no-select">
   <header>
-    <h1>Cyber Clash</h1>
+    <h1 class="typewriter glow-text">
+      <span>C</span>
+      <span>Y</span>
+      <span>B</span>
+      <span>E</span>
+      <span>R</span>
+      <span> </span>
+      <span>C</span>
+      <span>L</span>
+      <span>A</span>
+      <span>S</span>
+      <span>H</span>
+    </h1>
   </header>
-  <main class="flex center gap">
+  <main class="flex one center">
     <!--  
       Lobby will hold placeholders for participants when game is not running. As users join it will update the chosen
       avatar and user name. Once three users have joined (or at least one) the admin can start the game. 
       I think we should leave the game control only on the admin frontend.          
     -->
-    <section class="f-col center">
+    <section class="f-col center one">
       <div class="lobby tech-inset flex sp-even">
         <div class="center f-col">
           <h4 class="player-one-status">Unoccupied</h4>
@@ -56,12 +68,14 @@
       </div>
     <!-- </section>
     <section class="question-display-viewing f-col"> -->
-      <h3>Current Question:</h3>
+      <h3 class="glow-text">Current Question:</h3>
       <div class="question-wrapper flex">
         <p id="question-text">Waiting for the question...</p>
       </div>
     </section>
-    <section class="high-scores f-col" id="leaderboard">
+    <section class="f-col center one">
+      <div class="tech-inset high-scores f-col" id="leaderboard">
+      </div>
     </section>
   </main>
 </body>
