Styling done on Sign Up page

--- a/public/gameplay/index.html
+++ b/public/gameplay/index.html
@@ -21,7 +21,19 @@
   </head>
 <body>
   <header>
-    <h1>Cyber Clash</h1>
+    <h1 class="typewriter glow-text">
+      <span>C</span>
+      <span>Y</span>
+      <span>B</span>
+      <span>E</span>
+      <span>R</span>
+      <span> </span>
+      <span>C</span>
+      <span>L</span>
+      <span>A</span>
+      <span>S</span>
+      <span>H</span>
+    </h1>
   </header>
   <main class="f-col">
     <div class="StopMsg"></div>
@@ -54,7 +66,7 @@
           <p class="opt-two-txt">False</p>
         </div>
       </div>
-      <button class="submit">Submit</button>
+      <button class="submit btn-3d">Submit</button>
     </section>
   </main>
   <script src="/socket.io/socket.io.js"></script>
