--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -43,7 +43,7 @@
       I think we should leave the game control only on the admin frontend.          
     -->
     <section class="f-col center one">
-      <div class="lobby tech-inset flex sp-even">
+      <div class="lobby tech-inset glow-border flex sp-even">
         <div class="center f-col">
           <h4 class="player-one-status">Unoccupied</h4>
           <div class="circle">
