--- a/public/viewing/index.html
+++ b/public/viewing/index.html
@@ -43,6 +43,10 @@
       I think we should leave the game control only on the admin frontend.          
     -->
     <section class="f-col center one">
+      <h3 class="glow-text">Current Question:</h3>
+      <div class="question-wrapper flex">
+        <p id="question-text">Waiting for the question...</p>
+      </div>
       <div class="lobby tech-inset glow-border flex sp-even">
         <div class="center f-col">
           <h4 class="player-one-status">Unoccupied</h4>
@@ -66,15 +70,9 @@
           <p class="player-three">Not-joined</p>
         </div>
       </div>
-    <!-- </section>
-    <section class="question-display-viewing f-col"> -->
-      <h3 class="glow-text">Current Question:</h3>
-      <div class="question-wrapper flex">
-        <p id="question-text">Waiting for the question...</p>
-      </div>
     </section>
     <section class="f-col center one">
-      <div class="tech-inset high-scores f-col" id="leaderboard">
+      <div class="tech-inset glow-border high-scores f-col" id="leaderboard">
       </div>
     </section>
   </main>
